--- a/BaiTuan1/Bai1/bai1.html
+++ b/BaiTuan1/Bai1/bai1.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="22662651" content="Huỳnh Lê Minh Duy">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bai 1</title>
 </head>
+
 <body>
     <h1 id="top"><b>Example Cafe Menu</b></h1>
-    <a href="#Starters">Starters</a>
-    | 
-    <a href="#Main Courses">Main Courses</a>
-    |
-    <a href="#Desserts">Desserts</a>
-    <h2 id="Desserts">Starters</h2>
+    <a href="../Bai1/bai1.html#Starters">Starters</a> |
+    <a href="../Bai1/bai1.html#Main Courses">Main Courses</a> |
+    <a href="../Bai1/bai1.html#Desserts">Desserts</a>
+    <h2 id="Starters">Starters</h2>
     <ul>
         <li>Chestnut and Mushroom Goujons (<u>v</u>)</li>
         <li>Goat Cheese Salad (<u>v</u>)</li>
         <li>Honey Soy Chicken Kebabs</li>
         <li>Seafood Salad</li>
     </ul>
-    <a href="#top">Back to top</a>
+    <a href="../Bai1/bai1.html#top">Back to top</a>
     <h2 id="Main Courses">Main Courses</h2>
     <ul>
         <li>Spinach and Ricotta Roulade (<u>v</u>)s</li>
@@ -28,7 +29,7 @@
         <li>Icelandic Cod with Parsley Sauce</li>
         <li>Mushroom Wellington (<u>v</u>)</li>
     </ul>
-    <a href="#top">Back to top</a>
+    <a href="../Bai1/bai1.html#top">Back to top</a>
     <h2 id="Desserts">Desserts</h2>
     <ul>
         <li>Lemon Sorbet (<u>v</u>)</li>
@@ -36,8 +37,9 @@
         <li>Pecan Pie (<u>v</u>)</li>
         <li>Selection of Fine Cheese from Around the World</li>
     </ul>
-    <a href="#top">Back to top</a>
+    <a href="../Bai1/bai1.html#top">Back to top</a>
 
     <p>Items marked with a (v) are suitable for vegatatians</p>
 </body>
+
 </html>
