--- a/BaiTuan1/Bai2/bai2a.html
+++ b/BaiTuan1/Bai2/bai2a.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="22662651" content="Huỳnh Lê Minh Duy">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bai 2a</title>
 </head>
+
 <body>
-    <img src="../BaiTuan1/euler.jpg" alt="Euler">
+    <img src="../Bai2/euler.jpg" alt="Euler">
     <hr>
     <h1>Leonhard Euler (1707-1783)</h1>
     <!-- canh deu 2 ben  -->
 
-    <p style="text-align: justify;">The greatest mathematician of the eighteenth century, Leonhard Euler was born in Basel, Switzerland. There, he studied under another giant of mathematics, Jean Bernoulli. In 1731 Euler became a professor of physics and mathematics at St. Petersburg Academy of Sciences. Euler was the most prolific mathematician of all time, publishing over 800 different books and papers. His influence was felt in physics and astronomy as well. Euler's work on mathematical analysis, <i>Introductio in analysin infinitorum</i> (1748) remained a standard textbook for well over a century. For the princess of Anhalt-Dessau he wrote <i>Lettres a une princesse d'Allemagne</i> (1768-1772), giving a clear non-technical outline of the main physical theories of the time.
+    <p style="text-align: justify;">The greatest mathematician of the eighteenth century, Leonhard Euler was born in Basel, Switzerland. There, he studied under another giant of mathematics, Jean Bernoulli. In 1731 Euler became a professor of physics and mathematics at St. Petersburg
+        Academy of Sciences. Euler was the most prolific mathematician of all time, publishing over 800 different books and papers. His influence was felt in physics and astronomy as well. Euler's work on mathematical analysis, <i>Introductio in analysin infinitorum</i>        (1748) remained a standard textbook for well over a century. For the princess of Anhalt-Dessau he wrote <i>Lettres a une princesse d'Allemagne</i> (1768-1772), giving a clear non-technical outline of the main physical theories of the time.
         <br>
+        <br> One can hardly do math without copying Euler. Notations still in use today, such as e and pi, were introduced in Euler's writings. He is perhaps best known for his research into mathematical analysis. Euler's formula
         <br>
-        One can hardly do math without copying Euler. Notations still in use today, such as e and pi, were introduced in Euler's writings. He is perhaps best known for his research into mathematical analysis. Euler's formula
+        <br> cos(x) + isin(x) = e<sup>(ix)</sup>
         <br>
+        <br> demonstrates the relationship between algebra, complex analysis, and trigonometry. From this equation, it's easy to derive the equation
         <br>
-        cos(x) + isin(x) = e<sup>(ix)</sup>
+        <br> e
+        <sup>(&#8719 i)</sup> + 1 = 0
         <br>
+        <br> which relates the fundamental constants: 0, 1, &#8719, e, and i in a single beautiful and elegant statement.
         <br>
-        demonstrates the relationship between algebra, complex analysis, and trigonometry. From this equation, it's easy to derive the equation
-        <br>
-        <br>
-        e<sup>(&#8719 i)</sup> + 1 = 0
-        <br>
-        <br>
-        which relates the fundamental constants: 0, 1, &#8719, e, and i in a single beautiful and elegant statement.
-        <br>
-        <br>
-        Leonhard Euler died in 1783, leaving behind a legacy perhaps unmatched, and certainly unsurpassed, in the annals of mathematics.
+        <br> Leonhard Euler died in 1783, leaving behind a legacy perhaps unmatched, and certainly unsurpassed, in the annals of mathematics.
         <hr>
         <i>Math 895: The History of Mathematics</i>
-        </p>
+    </p>
 </body>
+
 </html>
