--- a/BaiTuan1/Bai3/Slide1.html
+++ b/BaiTuan1/Bai3/Slide1.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="22662651" content="Huỳnh Lê Minh Duy">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slide 1</title>
 </head>
+
 <body>
-    <img src="fiddler.jpg" alt="Fiddler">
+    <img src="../Bai3/fiddler.jpg" alt="Fiddler">
     <hr>
-    <a href="home.html"><img src="home.jpg"></a>
-    
-    <a href="Slide1.html"><img src="start.jpg"></a>
-    <a href="Slide1.html"><img src="back.jpg"></a>
-    <a href="Slide2.html"><img src="forward.jpg"></a>
-    <a href="Slide6.html"><img src="end.jpg"></a>
+    <a href="../Bai3/home.html"><img src="home.jpg"></a>
+
+    <a href="../Bai3/Slide1.html"><img src="start.jpg"></a>
+    <a href="../Bai3/Slide1.html"><img src="back.jpg"></a>
+    <a href="../Bai3/Slide2.html"><img src="forward.jpg"></a>
+    <a href="../Bai3/Slide6.html"><img src="end.jpg"></a>
     <br>
-    <img src="Slide1.jpg" alt="Slide1" height="50">
-    <img src="Slide2.jpg" alt="Slide2" height="50">
-    <img src="Slide3.jpg" alt="Slide3" height="50">
-    <img src="Slide4.jpg" alt="Slide4" height="50">
-    <img src="Slide5.jpg" alt="Slide5" height="50">
-    <img src="Slide6.jpg" alt="Slide6" height="50">
+    <img src="../Bai3/thumb1.jpg" alt="Slide1">
+    <img src="../Bai3/thumb2.jpg" alt="Slide2">
+    <img src="../Bai3/thumb3.jpg" alt="Slide3">
+    <img src="../Bai3/thumb4.jpg" alt="Slide4">
+    <img src="../Bai3/thumb5.jpg" alt="Slide5">
+    <img src="../Bai3/thumb6.jpg" alt="Slide6">
     <hr>
-    <img src="slide1.jpg" alt="slide1">
+    <img src="../Bai3/slide1.jpg" alt="slide1">
     <p style="font-size: 60%;"><i>&#160;&#160&#160;&#160;&#160;&#160;&#160;&#160; Do You Love Me? </i>sung by Deb Ingalls and Thomas Gates</p>
 </body>
+
 </html>
