--- a/BaiTuan1/Bai6/RegistrationForm.html
+++ b/BaiTuan1/Bai6/RegistrationForm.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="22662651 - Huỳnh Lê Minh Duy - Tuan01" content="HTML CƠ BẢN">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
     <style>
@@ -11,12 +12,18 @@
             padding: 0;
             box-sizing: border-box;
         }
+        
     </style>
 </head>
 
 <body style="background-color: rgb(26, 145, 230);">
     <div>
-
+        <div class="heading-text">
+            <i class="fa-solid fa-bolt-lightning"></i>     
+            Jackson
+            <span></span>
+            Electionics
+        </div>
     </div>
     <div>
         <form name="Registration">
