--- a/BaiTuan1/Bai3/Slide3.html
+++ b/BaiTuan1/Bai3/Slide3.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="22662651" content="Huỳnh Lê Minh Duy">
+    <meta name="22662651 - Huỳnh Lê Minh Duy - Tuần 01" content="HTML Cơ bản">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slide 3</title>
 </head>
