--- a/BaiTuan1/Bai3/home.html
+++ b/BaiTuan1/Bai3/home.html
@@ -15,7 +15,7 @@
    Supporting files: fiddler.jpg
                      
 -->
-    <meta name="22662651" content="Huỳnh Lê Minh Duy">
+    <meta name="22662651 - Huỳnh Lê Minh Duy - Tuần 01" content="HTML Cơ bản">
     <title>Fiddler on the Roof Junior</title>
 
 </head>
