--- a/BaiTuan1/Bai4/home4.html
+++ b/BaiTuan1/Bai4/home4.html
@@ -13,7 +13,7 @@
    Filename:         home.htm
    Supporting files: diamond.jpg
 -->
-    <meta name="22662651" content="Huỳnh Lê Minh Duy">
+    <meta name="22662651 - Huỳnh Lê Minh Duy - Tuần 01" content="HTML Cơ bản">
     <title>Diamond Health Club of Seattle</title>
 
 </head>
